// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgramCard should render correctly for live 1`] = `
.emotion-6 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.emotion-6:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-6:hover,
.emotion-6:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6:visited {
  color: #6E6E73;
}

.emotion-0 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #B80000;
  display: inline-block;
  margin-right: 0.5rem;
}

.emotion-2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <div
    class="CardWrapper-sc-6oo8lp-2 jgjrOO"
  >
    <div
      class="TextWrapper-sc-6oo8lp-3 bcFowo"
    >
      <h3
        class="StyledH3-sc-6oo8lp-4 ihgFOy"
      >
        <a
          class="StyledLink-sc-6oo8lp-1 drnVCd emotion-6 emotion-7"
          href="/news/articles/cn7k01xp8kxo"
        >
          <span
            class="HeadingContentWrapper-sc-6oo8lp-11 jHsaER"
            role="text"
          >
            <span
              role="text"
            >
              <span
                aria-hidden="true"
                class="emotion-0 emotion-1"
                dir="ltr"
              >
                LIVE 
              </span>
              <span
                class="emotion-2 emotion-3"
                lang="en-GB"
              >
                Live, 
              </span>
            </span>
            Could a computer ever create better art than a human?
            <span
              class="emotion-2 emotion-3"
            >
              , 
              14:54
              , 
            </span>
            <span
              class="TitleWrapper-sc-6oo8lp-0 kqgECY"
            >
              August 27, 2019
            </span>
          </span>
        </a>
      </h3>
      <p
        class="SummaryWrapper-sc-6oo8lp-6 Lptrc"
      >
        The critic, author, poet and TV host was known for his witty commentary on international television.
      </p>
    </div>
    <div
      class="ButtonWrapper-sc-6oo8lp-7 kPODHC"
    >
      <span
        class="IconWrapper-sc-6oo8lp-8 dKFQcC"
      >
        <svg
          aria-hidden="true"
          class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </span>
      <time
        class="DurationWrapper-sc-6oo8lp-9 fMidIG"
        datetime="PT30M"
        dir="ltr"
      >
        <span
          class="emotion-2 emotion-3"
        >
           Duration 30,00 
        </span>
        <span
          aria-hidden="true"
          class="DurationTextWrapper-sc-6oo8lp-10 dfaGSJ"
        >
          30:00
        </span>
      </time>
    </div>
  </div>
</div>
`;

exports[`ProgramCard should render correctly for next 1`] = `
.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <div
    class="CardWrapper-sc-6oo8lp-2 jgjrOO"
  >
    <div
      class="TextWrapper-sc-6oo8lp-3 bcFowo"
    >
      <h3
        class="StyledH3-sc-6oo8lp-4 hlWgZt"
      >
        <span
          class="HeadingContentWrapper-sc-6oo8lp-11 jHsaER"
          role="text"
        >
          <span
            class="NextLabel-sc-6oo8lp-5 kzBJH"
            dir="ltr"
          >
            NEXT 
          </span>
          Could a computer ever create better art than a human?
          <span
            class="emotion-0 emotion-1"
          >
            , 
            14:54
            , 
          </span>
          <span
            class="TitleWrapper-sc-6oo8lp-0 gaBXGU"
          >
            August 27, 2019
          </span>
        </span>
      </h3>
      <p
        class="SummaryWrapper-sc-6oo8lp-6 Lptrc"
      >
        The critic, author, poet and TV host was known for his witty commentary on international television.
      </p>
    </div>
    <div
      class="ButtonWrapper-sc-6oo8lp-7 glhZpD"
    >
      <span
        class="IconWrapper-sc-6oo8lp-8 gqyxry"
      >
        <svg
          aria-hidden="true"
          class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </span>
      <time
        class="DurationWrapper-sc-6oo8lp-9 fMidIG"
        datetime="PT30M"
        dir="ltr"
      >
        <span
          class="emotion-0 emotion-1"
        >
           Duration 30,00 
        </span>
        <span
          aria-hidden="true"
          class="DurationTextWrapper-sc-6oo8lp-10 dfaGSJ"
        >
          30:00
        </span>
      </time>
    </div>
  </div>
</div>
`;

exports[`ProgramCard should render correctly for onDemand 1`] = `
.emotion-2 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.emotion-2:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-2:hover,
.emotion-2:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2:visited {
  color: #6E6E73;
}

.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <div
    class="CardWrapper-sc-6oo8lp-2 jgjrOO"
  >
    <div
      class="TextWrapper-sc-6oo8lp-3 bcFowo"
    >
      <h3
        class="StyledH3-sc-6oo8lp-4 ihgFOy"
      >
        <a
          class="StyledLink-sc-6oo8lp-1 drnVCd emotion-2 emotion-3"
          href="/news/articles/cn7k01xp8kxo"
        >
          <span
            class="HeadingContentWrapper-sc-6oo8lp-11 jHsaER"
            role="text"
          >
            Could a computer ever create better art than a human?
            <span
              class="emotion-0 emotion-1"
            >
              , 
              14:54
              , 
            </span>
            <span
              class="TitleWrapper-sc-6oo8lp-0 kqgECY"
            >
              August 27, 2019
            </span>
          </span>
        </a>
      </h3>
      <p
        class="SummaryWrapper-sc-6oo8lp-6 Lptrc"
      >
        The critic, author, poet and TV host was known for his witty commentary on international television.
      </p>
    </div>
    <div
      class="ButtonWrapper-sc-6oo8lp-7 fastOq"
    >
      <span
        class="IconWrapper-sc-6oo8lp-8 dKFQcC"
      >
        <svg
          aria-hidden="true"
          class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </span>
      <time
        class="DurationWrapper-sc-6oo8lp-9 fMidIG"
        datetime="PT30M"
        dir="ltr"
      >
        <span
          class="emotion-0 emotion-1"
        >
           Duration 30,00 
        </span>
        <span
          aria-hidden="true"
          class="DurationTextWrapper-sc-6oo8lp-10 dfaGSJ"
        >
          30:00
        </span>
      </time>
    </div>
  </div>
</div>
`;

exports[`ProgramCard should render correctly in RTL 1`] = `
.emotion-2 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.emotion-2:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-2:hover,
.emotion-2:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2:visited {
  color: #6E6E73;
}

.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <div
    class="CardWrapper-sc-6oo8lp-2 jgjrOO"
  >
    <div
      class="TextWrapper-sc-6oo8lp-3 bcFowo"
    >
      <h3
        class="StyledH3-sc-6oo8lp-4 bQOdKp"
      >
        <a
          class="StyledLink-sc-6oo8lp-1 drnVCd emotion-2 emotion-3"
          href="/arabic/articles/c1er5mjnznzo"
        >
          <span
            class="HeadingContentWrapper-sc-6oo8lp-11 jHsaER"
            role="text"
          >
            لماذا يخجل البعض من اسم قريته في مصر؟
            <span
              class="emotion-0 emotion-1"
            >
              , 
              ١٣:٥٤
              , 
            </span>
            <span
              class="TitleWrapper-sc-6oo8lp-0 eEiwMK"
            >
              ٢٧ أغسطس ٢٠١٩
            </span>
          </span>
        </a>
      </h3>
      <p
        class="SummaryWrapper-sc-6oo8lp-6 kdiuZL"
      >
        هناك وقائع عدة تتسم بالسخرية والجدل والتنمر، ضد أهل القرية الذين أصابهم الغضب والسخط مما دفعهم إلى تقديم طلب لتغيير اسم قريتهم.
      </p>
    </div>
    <div
      class="ButtonWrapper-sc-6oo8lp-7 bVNTNn"
    >
      <span
        class="IconWrapper-sc-6oo8lp-8 dKFQcC"
      >
        <svg
          aria-hidden="true"
          class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </span>
      <time
        class="DurationWrapper-sc-6oo8lp-9 hWRNdd"
        datetime="PT30M"
        dir="rtl"
      >
        <span
          class="emotion-0 emotion-1"
        >
           المدة الزمنية ٣٠،٠٠ 
        </span>
        <span
          aria-hidden="true"
          class="DurationTextWrapper-sc-6oo8lp-10 dfaGSJ"
        >
          ٣٠:٠٠
        </span>
      </time>
    </div>
  </div>
</div>
`;

exports[`ProgramCard should render correctly without summary 1`] = `
.emotion-6 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.emotion-6:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-6:hover,
.emotion-6:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6:visited {
  color: #6E6E73;
}

.emotion-0 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #B80000;
  display: inline-block;
  margin-right: 0.5rem;
}

.emotion-2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <div
    class="CardWrapper-sc-6oo8lp-2 jgjrOO"
  >
    <div
      class="TextWrapper-sc-6oo8lp-3 bcFowo"
    >
      <h3
        class="StyledH3-sc-6oo8lp-4 ihgFOy"
      >
        <a
          class="StyledLink-sc-6oo8lp-1 drnVCd emotion-6 emotion-7"
          href="/news/articles/cn7k01xp8kxo"
        >
          <span
            class="HeadingContentWrapper-sc-6oo8lp-11 jHsaER"
            role="text"
          >
            <span
              role="text"
            >
              <span
                aria-hidden="true"
                class="emotion-0 emotion-1"
                dir="ltr"
              >
                LIVE 
              </span>
              <span
                class="emotion-2 emotion-3"
                lang="en-GB"
              >
                Live, 
              </span>
            </span>
            Could a computer ever create better art than a human?
            <span
              class="emotion-2 emotion-3"
            >
              , 
              14:54
              , 
            </span>
            <span
              class="TitleWrapper-sc-6oo8lp-0 kqgECY"
            >
              August 27, 2019
            </span>
          </span>
        </a>
      </h3>
    </div>
    <div
      class="ButtonWrapper-sc-6oo8lp-7 kPODHC"
    >
      <span
        class="IconWrapper-sc-6oo8lp-8 dKFQcC"
      >
        <svg
          aria-hidden="true"
          class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </span>
      <time
        class="DurationWrapper-sc-6oo8lp-9 fMidIG"
        datetime="PT30M"
        dir="ltr"
      >
        <span
          class="emotion-2 emotion-3"
        >
           Duration 30,00 
        </span>
        <span
          aria-hidden="true"
          class="DurationTextWrapper-sc-6oo8lp-10 dfaGSJ"
        >
          30:00
        </span>
      </time>
    </div>
  </div>
</div>
`;
